crates/nash-report/src/syntax/snapshots/nash_report__syntax__expr__tests__record_field_bad.snap
---
source: crates/nash-report/src/syntax/expr.rs
description: "value = { 1 = 2 }"
---
nash::syntax

  × Expected a record field.
   ╭─[src/Main.nash:1:11]
 1 │ value = { 1 = 2 }
   ·           ─
   ╰────
  help: Write `name = value`; separate fields with commas.
