crates/nash-report/src/syntax/snapshots/nash_report__syntax__expr__tests__record_indent_equals.snap
---
source: crates/nash-report/src/syntax/expr.rs
description: "value = { x\n= 1 }"
---
nash::syntax

  × Expected `=` after the field name.
   ╭─[src/Main.nash:2:1]
 1 │ value = { x
 2 │ = 1 }
   · ─
   ╰────
  help: Write `name = value` for a record field.
