crates/nash-report/src/syntax/snapshots/nash_report__syntax__expr__tests__record_indent_expr.snap
---
source: crates/nash-report/src/syntax/expr.rs
description: "value = { x =\n1 }"
---
nash::syntax

  × Expected a field value after `=`.
   ╭─[src/Main.nash:2:1]
 1 │ value = { x =
 2 │ 1 }
   · ─
   ╰────
  help: Add an indented expression.
