crates/nash-report/src/syntax/snapshots/nash_report__syntax__expr__tests__record_indent_open.snap
---
source: crates/nash-report/src/syntax/expr.rs
expression: "snapshot(Expr::Record(&Record::IndentOpen(1, 9), 1, 9), \"value = \")"
---
UNFINISHED RECORD
Region { start: Position { line: 1, column: 9 }, end: Position { line: 1, column: 9 } }

I was partway through parsing a record, but I got stuck here:

I just saw the opening curly brace of a record. I was expecting a field name or
a closing curly brace next. Try adding more indentation.

    { name = "Nash"
      , age = 1
      }

Notice that each line starts with some indentation. Usually two or four spaces.
