crates/nash-report/src/syntax/snapshots/nash_report__syntax__expr__tests__record_unexpected_equals.snap
---
source: crates/nash-report/src/syntax/expr.rs
expression: "snapshot(Expr::Record(&Record::Expr(&Expr::OperatorReserved(BadOperator::Equals,\n1, 9), 1, 9), 1, 9), \"value = =\")"
---
UNEXPECTED EQUALS
Region { start: Position { line: 1, column: 9 }, end: Position { line: 1, column: 10 } }

I was not expecting this equals sign:

Maybe you want == instead? To check if two values are equal?

Note: Records look like { x = 3, y = 4 } with the equals sign right after the
field name. So maybe you forgot a comma?
