crates/nash-report/src/syntax/snapshots/nash_report__syntax__expr__tests__string_endless_multi.snap
---
source: crates/nash-report/src/syntax/expr.rs
description: "value = \"\"\"unfinished"
---
nash::syntax::unclosed_delimiter

  × Expected `"""` to close `"""`.
   ╭─[src/Main.nash:1:9]
 1 │ value = """unfinished
   ·         ┬─┬
   ·         │ ╰── opened here
   ·         ╰── expected `"""`
   ╰────
  help: Add `"""` here.
