crates/nash-report/src/syntax/snapshots/nash_report__syntax__expr__tests__string_endless_single.snap
---
source: crates/nash-report/src/syntax/expr.rs
expression: "snapshot(Expr::String(StringError::EndlessSingle, 1, 9), \"value = \")"
---
ENDLESS STRING
Region { start: Position { line: 1, column: 9 }, end: Position { line: 1, column: 9 } }

I got to the end of the line without seeing the closing double quote:

Strings look like "this" with double quotes on each end. Is the closing double
quote missing in your code? For a string that spans multiple lines, use triple
double quotes on each end.

    """
    # Multi-line Strings

    - start with triple double quotes
    - write whatever you want
    - no need to escape newlines or double quotes
    - end with triple double quotes
    """

Here is a valid multi-line string for reference.
